--- a/.github/workflows/python-linter.yml
+++ b/.github/workflows/python-linter.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: self-host
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.8
